# kassandra-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  __main__.py  bot.py
